doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
D:\Greenfoot\lib\greenfoot.jar;D:\Greenfoot\lib\bluejcore.jar;D:\Greenfoot\lib\bluejeditor.jar;D:\Greenfoot\lib\bluejext2.jar;D:\Greenfoot\lib\junit-jupiter-5.5.2.jar;D:\Greenfoot\lib\junit-jupiter-api-5.5.2.jar;D:\Greenfoot\lib\junit-jupiter-engine-5.5.2.jar;D:\Greenfoot\lib\junit-jupiter-migrationsupport-5.5.2.jar;D:\Greenfoot\lib\junit-jupiter-params-5.5.2.jar;D:\Greenfoot\lib\junit-platform-commons-1.5.2.jar;D:\Greenfoot\lib\junit-platform-console-1.5.2.jar;D:\Greenfoot\lib\junit-platform-console-standalone-1.5.2.jar;D:\Greenfoot\lib\junit-platform-engine-1.5.2.jar;D:\Greenfoot\lib\junit-platform-launcher-1.5.2.jar;D:\Greenfoot\lib\junit-platform-reporting-1.5.2.jar;D:\Greenfoot\lib\junit-platform-runner-1.5.2.jar;D:\Greenfoot\lib\junit-platform-suite-api-1.5.2.jar;D:\Greenfoot\lib\junit-platform-testkit-1.5.2.jar;D:\Greenfoot\lib\junit-quickcheck-core-0.9.jar;D:\Greenfoot\lib\junit-vintage-engine-5.5.2.jar;D:\Greenfoot\lib\hamcrest-core-1.3.jar;D:\Greenfoot\lib\bluej.jar;D:\Greenfoot\lib\classgraph-4.8.90.jar;D:\Greenfoot\lib\diffutils-1.2.1.jar;D:\Greenfoot\lib\commons-logging-api-1.1.2.jar;D:\Greenfoot\lib\jl1.0.1.jar;D:\Greenfoot\lib\opencsv-2.3.jar;D:\Greenfoot\lib\xom-1.2.9.jar;D:\Greenfoot\lib\lang-stride.jar;D:\Greenfoot\lib\nsmenufx-2.1.8.jar;D:\Greenfoot\lib\richtextfx-fat-0.9.0.jar;D:\Greenfoot\lib\guava-17.0.jar;D:\Greenfoot\lib\httpclient-4.1.1.jar;D:\Greenfoot\lib\httpcore-4.1.jar;D:\Greenfoot\lib\httpmime-4.1.1.jar;D:\Greenfoot\lib\javafx\lib\javafx.base.jar;D:\Greenfoot\lib\javafx\lib\javafx.controls.jar;D:\Greenfoot\lib\javafx\lib\javafx.fxml.jar;D:\Greenfoot\lib\javafx\lib\javafx.graphics.jar;D:\Greenfoot\lib\javafx\lib\javafx.media.jar;D:\Greenfoot\lib\javafx\lib\javafx.properties.jar;D:\Greenfoot\lib\javafx\lib\javafx.swing.jar;D:\Greenfoot\lib\javafx\lib\javafx.web.jar;D:\Gitprojects\unit-1-crab-project-Kai-6
-d
D:\Gitprojects\unit-1-crab-project-Kai-6\doc
-encoding
UTF-8
-charset
UTF-8
D:\Gitprojects\unit-1-crab-project-Kai-6\Lobster.java
<---- end of javadoc command ---->
Loading source file D:\Gitprojects\unit-1-crab-project-Kai-6\Lobster.java...
D:\Gitprojects\unit-1-crab-project-Kai-6\Lobster.java:21: error: illegal start of expression
            );
            ^
1 error
